hphp/hack/test/typecheck/modules/module_first4.php
<?hh
<<file:__EnableUnstableFeatures("modules")>>
module bar;
class Foo {}

module foo;
